--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     src: url(fonts/IBMPlexMono-Regular.ttf);
 }
 
+@font-face {
+    font-family: 'Inter';
+    src: url(fonts/Inter-Regular.ttf);
+}
+
 body{
     background-color: #4B96F1;
 }
@@ -35,7 +40,6 @@ main {
 input {
     width: 50px;
     height: 40px;
-    background: rgb(195, 195, 195);
 }
 
 
@@ -48,6 +52,9 @@ h3 {
 
 button {
     font: 500 16px 'IBM', sans-serif;
+    margin: 10px;
+    padding: 5px;
+    background-color: #ffffff00;
 }
 
 .tudo{
@@ -63,13 +70,16 @@ button {
     display: flex;
 }
 
-button{
-    margin: 10px;
-}
-
 .esquerdo{
     margin-right: 100px;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.384);
     border-radius: 8px;
+}
+.fa-eraser, .fa-pencil{
+    padding-right: 6px;
+}
+
+.botao-forma.selecionado {
+    color: #4B96F1;
 }
