--- a/style.css
+++ b/style.css
@@ -194,7 +194,6 @@ i {
 
 #botaoDesfazer:hover {
     color: transparent;
-    background-color: #346aac;
 }
 
 #botaoDesfazer:hover i {
@@ -209,7 +208,54 @@ i {
 #botaoDesfazer:active {
     transform: translate(3px, 3px);
     transition-duration: .3s;
-    box-shadow: 2px 2px 0px rgb(140, 32, 212);
+    box-shadow: 2px 2px 0px rgb(32, 41, 212);
+}
+
+#botaoRefazer {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 120px;
+    height: 40px;
+    border: none;
+    padding: 0px 20px;
+    background-color: #4B96F1;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 5px 5px 0px rgb(68, 113, 168);
+    transition-duration: .3s;
+    margin-bottom: 30px;
+}
+
+.fa-arrow-rotate-right {
+    width: 13px;
+    position: absolute;
+    right: 0;
+    margin-right: 20px;
+    fill: white;
+    transition-duration: .3s;
+}
+
+#botaoRefazer:hover {
+    color: transparent;
+}
+
+#botaoRefazer:hover i {
+    right: 43%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    transition-duration: .3s;
+    color: white;
+}
+
+#botaoRefazer:active {
+    transform: translate(3px, 3px);
+    transition-duration: .3s;
+    box-shadow: 2px 2px 0px rgb(32, 41, 212);
 }
 
 .botaoDiferente {
